--- a/package.json
+++ b/package.json
@@ -9,12 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "autoprefixer": "^10.2.6",
     "next": "11.0.0",
+    "postcss": "^8.3.5",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "tailwindcss": "^2.2.2"
   },
   "devDependencies": {
+    "@types/react": "^17.0.11",
     "eslint": "7.29.0",
-    "eslint-config-next": "11.0.0"
+    "eslint-config-next": "11.0.0",
+    "typescript": "^4.3.4"
   }
 }
